--- a/angular/package.json
+++ b/angular/package.json
@@ -28,6 +28,7 @@
     "ng-angular8-datatable": "^0.9.11",
     "ng2-validation": "^4.2.0",
     "ngx-show-hide-password": "^2.1.0",
+    "ngx-spinner": "^8.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
